# basis-gateway

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.mypy_cache/3.10/: cache.0.db  cache.0.db-journal
docs/: audit-failure-escalation.md  audit-model.md  oidc-integration.md  release-candidate-assessment.md  release-checklist.md  release-readiness.md  troubleshooting.md
docs/implementation/: basis-gateway-v0.1-plan.md
docs/releases/: v0.1.0.md
policies/: default.json
src/basis_gateway/: __init__.py  config.py  errors.py  main.py  readiness.py
src/basis_gateway/api/: __init__.py  routes.py  schemas.py
src/basis_gateway/audit/: __init__.py  gateway_events.py  writer.py
src/basis_gateway/auth/: __init__.py  errors.py  oidc.py  subject_mapper.py
src/basis_gateway/core/: __init__.py  actions.py  evaluator.py  resources.py
src/basis_gateway/middleware/: correlation.py
src/basis_gateway/policy/: __init__.py  loader.py
tests/: conftest.py  helpers.py  test_action_composition.py  test_actions.py  test_api_consistency.py  test_audit.py  test_audit_escalation_integration.py  test_audit_hardening.py  test_audit_writer_escalation.py  test_auth.py  test_config.py  test_correlation.py  test_diagnostics.py  test_evaluate.py  test_example_policy.py  test_fail_closed.py  test_health.py  test_phase4_readiness.py  test_policy_loader.py  test_ready.py  test_resource_composition.py  test_resources.py  test_subject_mapper.py
