[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basis-gateway"
version = "0.1.0"
description = "Authentication, identity normalization, and HTTP enforcement boundary for basis-core"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "basis-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpserver>=1.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "cryptography>=42.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/basis_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RET", "SIM", "TID"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

# Starlette does not ship a py.typed marker in all versions, so importing from
# starlette.middleware.base may produce import-untyped or import-not-found errors
# depending on the installed version.  The targeted type: ignore comments in
# correlation.py handle those cases, but strict mode's warn_unused_ignores would
# flag them as spurious in environments where starlette IS typed.  Disabling
# warn_unused_ignores for just this module keeps the rest of the codebase fully
# strict while allowing the cross-environment ignores to coexist quietly.
[[tool.mypy.overrides]]
module = ["basis_gateway.middleware.correlation"]
warn_unused_ignores = false
