[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basis-gateway"
version = "0.1.0"
description = "Authentication, identity normalization, and HTTP enforcement boundary for basis-core"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "basis-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpserver>=1.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "cryptography>=42.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/basis_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RET", "SIM", "TID"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

# Starlette does not ship a py.typed marker in all versions, so importing from
# starlette.middleware.base may produce import-untyped or import-not-found errors
# depending on the installed version.  The targeted type: ignore comments in
# correlation.py handle those cases, but strict mode's warn_unused_ignores would
# flag them as spurious in environments where starlette IS typed.  Disabling
# warn_unused_ignores for just this module keeps the rest of the codebase fully
# strict while allowing the cross-environment ignores to coexist quietly.
[[tool.mypy.overrides]]
module = ["basis_gateway.middleware.correlation"]
warn_unused_ignores = false

# basis-core is a sibling package developed in a separate repo/wheel. Its
# source is not present in this type-checking environment, so suppress
# import-not-found errors narrowly rather than globally.
[[tool.mypy.overrides]]
module = ["basis_core", "basis_core.*"]
ignore_missing_imports = true

# pydantic-settings ships a py.typed marker but may not be installed in all
# type-checking environments (e.g. CI images that only install mypy itself).
# Ignore missing stubs narrowly; the subclass error in config.py is handled
# with an inline type: ignore[misc] on the class definition.
[[tool.mypy.overrides]]
module = ["pydantic_settings"]
ignore_missing_imports = true

# GatewayConfig subclasses BaseSettings from pydantic-settings.  When
# pydantic-settings is absent the type: ignore[misc] on the class line is
# needed; when it IS installed mypy flags it as unused.  Disable
# warn_unused_ignores for this module to allow the ignore to coexist across
# both environments (same pattern as middleware.correlation).
[[tool.mypy.overrides]]
module = ["basis_gateway.config"]
warn_unused_ignores = false

# FastAPI and Starlette do not ship py.typed markers in all installed versions.
# Suppress import-not-found / import-untyped errors narrowly so that the rest
# of the codebase stays fully strict.  Untyped-decorator errors in routes.py
# and main.py are covered by the same override because they are a downstream
# consequence of the missing stubs.
[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "starlette", "starlette.*"]
ignore_missing_imports = true

# PyJWT >=2.8 (the project minimum) ships typed stubs for jwt.get_unverified_header
# and the PyJWKClient kwargs added in 2.8 (cache_jwk_set, lifespan).  The inline
# type: ignore comments added for older sandbox stubs are now unused in
# environments with the correct version; disable warn_unused_ignores here so the
# file compiles cleanly in both old- and new-stub environments.
[[tool.mypy.overrides]]
module = ["basis_gateway.auth.oidc"]
warn_unused_ignores = false

# FastAPI route decorators (@router.get, @router.post, @app.exception_handler, etc.)
# are untyped in environments where FastAPI stubs are absent or incomplete.  The
# [misc] "untyped decorator makes function untyped" errors are a downstream
# consequence of the missing stubs and cannot be fixed without rewriting the
# routes.  Disable disallow_untyped_decorators narrowly for just these two modules;
# all other strict-mode checks remain fully enforced.
[[tool.mypy.overrides]]
module = ["basis_gateway.api.routes", "basis_gateway.main"]
disallow_untyped_decorators = false
